--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,9 @@
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/platform-ws": "^7.6.15",
     "@nestjs/typeorm": "^7.1.5",
+    "@nestjs/websockets": "^7.6.15",
     "bull": "^3.22.0",
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
@@ -41,6 +43,7 @@
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
     "@types/supertest": "^2.0.10",
+    "@types/ws": "^7.4.1",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
